--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="search">
 		<form class = "search-bar">
 			<label for = "query"></label>
-			<input type="text" id="query" maxlength="5" placeholder="Enter zip code" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
+			<inpADFADFADFADFut type="text" id="query" maxlength="5" placeholder="Enter zip code" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
 			<button type="submit">Search</button>
 		</form>
 	</div>
