listing out places now

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
 	</div>
 	
 	<!-- Results -->
-	<div class="results hidden">
-		
-		
-	</div>
+
+	<container>
+
+		<h2>Results</h2><br>
+   		<h3>Hospital Names<h3/><br>
+		<div class="results">
+			
+		</div>
+
+	</container>	
 </main>
 
 <!-- Scripts -->
