--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Find My Hospital</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -26,8 +27,7 @@
 
 	<container>
 
-		<h2>Results</h2><br>
-   		<h3>Hospital Names<h3/><br>
+		<h2 class="hidden">Results</h2><br>
 		<div class="results">
 			
 		</div>
