--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<script type="text/javascript" src="app.js"></script>
 	<!-- API key for Google maps -->
 	<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initialMap&libraries=places">
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
 	</script>
 </body>
 </html>
