--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<main>
+	<header>
 		<h1>Find My Hospital</h1>
 		<!-- Search -->
 		<div class="search">
 			<form class = "search-bar">
 				<label for = "query"></label>
-				<input type="text" id="query" maxlength="5" placeholder="Enter zip code" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
+				<input type="text" id="query" maxlength="5" placeholder="zipcode" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
 				<button type="submit">Search</button>
 			</form>
 		</div>
+	</header>
 		<!-- Map -->
-		<div id="map">
+	<main>
+		<div class="map">
+			<div id="map">
+			</div>
 		</div>
 		<!-- Results -->
-		<container>
-			<h2 class="hidden">Results</h2><br>
-			<div class="results">	
+		<div class="container">
+			<div class="results hidden">	
 			</div>
-		</container>	
+		</div class="container">	
 	</main>
 <!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
