basic  star ratings

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Find My Hospital</title>
 	<!-- <link rel="stylesheet" type="text/css" href="grid.css"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -36,6 +37,7 @@
 	<!-- API key for Google maps -->
 	<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
-	</script>
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
 </body>
 </html>
