--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>Find My Hospital</title>
-	<!-- <link rel="stylesheet" type="text/css" href="grid.css"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -10,26 +9,26 @@
 <body>
 	<header>
 		<h1>Find My Hospital</h1>
-		<!-- Search -->
-		<div class="search">
+		<nav class="search">
 			<form class = "search-bar">
 				<label for = "query"></label>
 				<input type="text" id="query" maxlength="5" placeholder="zipcode" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
 				<button type="submit">Search</button>
 			</form>
-		</div>
+		</nav>
 	</header>
-		<!-- Map -->
 	<main>
-		<div class="map">
-			<div id="map">
-			</div>
-		</div>
+		<!-- Map -->
+		<section class="map-container hidden">
+			<div id="map"></div>
+		</section>
 		<!-- Results -->
-		<div class="container">
-			<div class="results hidden">	
+		<section>
+			<div class="results hidden"></div>
+			<div class="loading hidden">
+				<img src="images/spinner.svg">
 			</div>
-		</div class="container">	
+		</section>
 	</main>
 <!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
