partial star ratings added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<header>
 		<h1>Find My Hospital</h1>
 		<nav class="search">
-			<form class = "search-bar">
-				<label for = "query"></label>
-				<input type="text" id="query" maxlength="5" placeholder="zipcode" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required>
+			<form class="search-bar">
+				<label for="query"></label>
+				<input type="text" id="query" maxlength="5" placeholder="zipcode" onkeypress="return event.charCode >= 48 && event.charCode <= 57" required>
 				<button type="submit">Search</button>
 			</form>
 		</nav>
