--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<nav class="search">
 			<form class="search-bar">
 				<label for="query"></label>
-				<input type="text" id="query" maxlength="5" placeholder="zipcode" onkeypress="return event.charCode >= 48 && event.charCode <= 57" required>
+				<input type="text" id="query" placeholder="address" required>
 				<button type="submit">Search</button>
 			</form>
 		</nav>
