--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Find My Hospital</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
 	<header>
-		<h1>Find My Hospital</h1>
-		<nav class="search">
-			<form class="search-bar">
-				<label for="query"></label>
-				<input type="text" id="query" placeholder="address" required>
-				<button type="submit">Search</button>
-			</form>
-		</nav>
+		<div class="title">
+			<h1>Find My Hospital</h1>
+
+		</div>
+		<div class="banner">
+			<h2>Enter an address to find hospitals near you</h2>
+		</div>
 	</header>
+	
+	
+	<nav class="search">
+		<form class="search-bar">
+			<label for="query"></label>
+			<input type="text" id="query" placeholder="address" required>
+			<button type="submit">Search</button>
+		</form>
+	</nav>
 	<main>
 		<!-- Map -->
 		<section class="map-container hidden">
-			<div id="map"></div>
+			<div id="map">
+			</div>
 		</section>
 		<!-- Results -->
 		<section>
@@ -30,13 +41,13 @@
 			</div>
 		</section>
 	</main>
-<!-- Scripts -->
+	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<!-- API key for Google maps -->
-	<script async defer
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
 </body>
+
 </html>
