--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 	</main>
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="src/render-results.js"></script>
+	<script type="text/javascript" src="src/render-maps.js"></script>
+	<script type="text/javascript" src="src/render-markers.js"></script>
+	<script type="text/javascript" src="src/app.js"></script>
 	<!-- API key for Google maps -->
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
 	</script>
