marker id smooth scrolling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	
 </head>
 
 <body>
-	<header>
+	<header id="return-to-top">
 		<div class="title">
 			<h1>Find My Hospital</h1>
 		</div>
@@ -45,6 +46,9 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+
+	</footer>
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="src/render-results.js"></script>
