basic back to top button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
-	
+
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 		<div class="parallax banner">
 			<form class="search-bar">
 				<label for="query"></label>
-				
+
 				<input type="text" id="query" placeholder="Enter an address to find hospitals near you" required>
 				<button type="submit">Search</button>
 			</form>
@@ -31,12 +31,16 @@
 				<p>Ever needed to find the closest medical facility? Whether you need to go to the doc right
 					<em>now</em> or just want to see what's across town, you can enter your address to find your local doc.
 				</p>
+				
 			</div>
 		</nav>
 		<!-- Map -->
 		<section class="map-container hidden">
 			<div id="map">
 			</div>
+			<a href="#" class="scrollToTop">
+				Back to top
+			</a>
 		</section>
 		<!-- Results -->
 		<section>
