better back to top button

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 		<section class="map-container hidden">
 			<div id="map">
 			</div>
-			<a href="#" class="scrollToTop">
-				Back to top
-			</a>
+			<div class="scrollToTop">
+				<!-- <img src="images/arrow.png"> -->
+			</div>
 		</section>
 		<!-- Results -->
 		<section>
