--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Find My Hospital</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
+	<link rel="shortcut icon" href="images/favicon.ico">
+	
 	<link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
