new background and searchbar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<form class="search-bar">
 				<label for="query"></label>
 
-				<input type="text" id="query" placeholder="Enter an address to find hospitals near you" required>
-				<button type="submit">Search</button>
+				<input type="text" id="query" placeholder="Location" required>
+				<!-- <button type="submit">Search</button> -->
 			</form>
 		</div>
 	</header>
