--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<label for="query"></label>
 
 				<input type="text" id="query" placeholder="Location" required>
-				<!-- <button type="submit">Search</button> -->
+				<button type="submit"></button>
 			</form>
 		</div>
 	</header>
