--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="title">
 			<h1>Find My Hospital</h1>
 		</div>
-		<div class="parallax banner">
+		<div class="banner">
 			<form class="search-bar">
 				<label for="query"></label>
 
@@ -29,15 +29,15 @@
 		</div>
 	</header>
 	<main>
-
+		
 		<!-- SEARCH BAR -->
 		<nav class="search">
-			<div class="info">
-				<p>Ever needed to find the closest medical facility? Whether you need to go to the doc right
-					<em>now</em> or just want to see what's across town, you can enter your address to find your local doc.
-				</p>
-				
-			</div>
+				<div class="info">
+					<p>Ever needed to find the closest medical facility? Whether you need to go to the doc right
+						<em>now</em> or just want to see what's across town, you can enter your address to find your local doc.
+					</p>
+					
+				</div>
 		</nav>
 		<!-- Map -->
 		<section class="map-container hidden">
