--- a/index.html
+++ b/index.html
@@ -4,41 +4,39 @@
 <head>
 	<title>Find My Hospital</title>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee|Crete+Round" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="shortcut icon" href="images/favicon.ico">
-	
+
 	<link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
 
-<body>
+<body></body>
 	<header id="return-to-top">
 		<div class="title">
 			<h1>Find My Hospital</h1>
 		</div>
-		<div class="banner">
-			<form class="search-bar">
-				<label for="query"></label>
-
-				<input type="text" id="query" placeholder="Location" required>
-				<button type="submit"></button>
-			</form>
+		<div class="info">
+			<img src="images/hospital.png"/>
+			<p>For the times you need a doctor <em>now</em> or maybe later.
+			</p>
 		</div>
+	
+		<form class="search-bar">
+			<label for="query"></label>
+
+			<input type="text" id="query" placeholder="Location" required>
+			<button type="submit"></button>
+		</form>
+
 	</header>
 	<main>
-		
+
 		<!-- SEARCH BAR -->
-		<nav class="search">
-				<div class="info">
-					<p>Ever needed to find the closest medical facility? Whether you need to go to the doc right
-						<em>now</em> or just want to see what's across town, you can enter your address to find your local doc.
-					</p>
-					
-				</div>
-		</nav>
+
 		<!-- Map -->
 		<section class="map-container hidden">
 			<div id="map">
