--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	
 <head>
 	<title>Find My Hospital</title>
 	<meta charset="utf-8">
@@ -30,7 +31,6 @@
 		<div id="map">
 		</div>
 		<div class="scrollToTop">
-			<!-- <img src="images/arrow.png"> -->
 		</div>
 	</section>
 
