--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
 <header id="return-to-top" class="parallax">
 	<h1>Find My Hospital</h1>
-	<p>"For the times you need a doctor<em>now</em> or maybe later."</p>
+	<p>"For the times you need a doctor <em>now</em> or maybe later."</p>
 	<img src="images/hospital.png" />
 
 	<!-- SEARCH BAR -->
 	<form class="search-bar">
 		<label for="query"></label>
-		<input type="text" id="query" placeholder="Location" required>
+		<input type="text" id="query" placeholder="New York, NY" required>
 		<button type="submit"></button>
 	</form>
 </header>
