--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-	
+
 <head>
 	<title>Find My Hospital</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=ABeeZee|Crete+Round" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	<link href="https://fonts.googleapis.com/css?family=ABeeZee|Crete+Round" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-<header id="return-to-top" class="parallax">
-	<h1>Find My Hospital</h1>
-	<p>"For the times you need a doctor <em>now</em> or maybe later."</p>
-	<img src="images/hospital.png" />
+	<header id="return-to-top" class="parallax">
+		<h1>Find My Hospital</h1>
+		<p>"For the times you need a doctor
+			<em>now</em> or maybe later."</p>
+		<img src="images/hospital.png" />
 
-	<!-- SEARCH BAR -->
-	<form class="search-bar">
-		<label for="query"></label>
-		<input type="text" id="query" placeholder="New York, NY" required>
-		<button type="submit"></button>
-	</form>
-</header>
+		<!-- SEARCH BAR -->
+		<form class="search-bar">
+			<label for="query"></label>
+			<input type="text" id="query" placeholder="New York, NY" required>
+			<button type="submit"></button>
+		</form>
+	</header>
 
-<main>
-	<!-- Map -->
-	<section class="map-container hidden">
-		<div id="map">
-		</div>
-		<div class="scrollToTop">
-		</div>
-	</section>
+	<main>
+		<!-- Map -->
+		<section class="map-container hidden">
+			<div id="map">
+			</div>
+			<div class="scrollToTop">
+			</div>
+		</section>
 
-	<!-- Results -->
-	<section>
-		<div class="results hidden"></div>
-		<div class="loading hidden">
-			<img src="images/spinner.svg">
-		</div>
-	</section>
-</main>
+		<!-- Results -->
+		<section>
+			<div class="results hidden"></div>
+			<div class="loading hidden">
+				<img src="images/spinner.svg">
+			</div>
+		</section>
+	</main>
 
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="src/render-results.js"></script>
-<script type="text/javascript" src="src/render-maps.js"></script>
-<script type="text/javascript" src="src/render-markers.js"></script>
-<script type="text/javascript" src="src/app.js"></script>
-<!-- API key for Google maps -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&libraries=places">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="src/autocomplete.js"></script>
+	<script type="text/javascript" src="src/render-results.js"></script>
+	<script type="text/javascript" src="src/render-maps.js"></script>
+	<script type="text/javascript" src="src/render-markers.js"></script>
+	<script type="text/javascript" src="src/app.js"></script>
+	<!-- API key for Google maps -->
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initAutocomplete&libraries=places">
+	</script>
+	<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNb2Rq_psL37TOUxYPnAEt-eFzBrJZe2s&callback=initMap&callback=initAutocomplete&libraries=places">
+</script> -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
 </body>
+
 </html>
